--- a/styles/architects.css
+++ b/styles/architects.css
@@ -42,6 +42,10 @@ main {
 main > section {
     margin-top: 130px;
 }
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 /* header styles */
 
 
@@ -99,10 +103,7 @@ main > section {
     margin-left: 130px;
     max-width: 530px;
 }
-.feature-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-}
+
 #quick-list {
     font-weight: 500;
 }
