--- a/styles/architects.css
+++ b/styles/architects.css
@@ -184,6 +184,21 @@ main > section {
 .sponsor-companies img {
     filter: grayscale(100%);
 }
+/* footer section style here */
+.footer {
+    width: 1440px;
+    height: 100px;
+    background-color: #FFF4E7;
+    margin: 0 auto;
+    margin-top: 130px;
+    margin-bottom: 216px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    font-size: 20px;
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar, 
